--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.3",
+    "chartjs-plugin-colorschemes": "^0.4.0",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
